--- a/main.html
+++ b/main.html
@@ -10,7 +10,20 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	 <article>
+  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste, aperiam?</p>
+  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste, aperiam?</p>
+  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste, aperiam?</p>
+</article>
+<ul id="list">
+    <li>First item</li>
+    <li>Second item</li>
+    <li>Third item</li>
+    <li>Fourth item</li>
+    <li>Fifth item</li>
+</ul>
 
 </body>
+	
 
 </html>
